syntax = "proto3";

import "location.proto";

package protos;

message AudioAttachment {

    string mime = 1;

    string name = 2;

    uint64 time_stamp = 3;

    Location location = 4;

    bytes content = 5;
}