syntax = "proto3";

package protos;

message ImageAttachment {

    string mime = 1;

    string name = 2;

    bytes content = 3;
}