syntax = "proto3";

import "audio_attachment.proto";
import "image_attachment.proto";

package protos;

message Story{

    string title = 1;

    string description = 2;

    repeated ImageAttachment image_attachments = 3;

    repeated AudioAttachment audio_attachments = 4;
}